# nxctl

./: .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  REFACTORING_SUMMARY.md  TODO.md  a.md  app.py  config.example.yml  config.yml  ctfc-daemon.initd  ctfc-daemon.service  exports_pinggy_localtunnel_audit.md  nxbcl.yml  nxcloudflare.sh  pyproject.toml  requirements.txt  setup-alpine.sh  setup.sh  test_api.sh
_nxbc_nxctl/: PORTAL.md  SOLVER.md  docker-compose.yml  foundry.toml  solver.py
_nxbc_nxctl/artifacts/: ChallengeFactory.abi.json  Setup.abi.json
_nxbc_nxctl/contracts/: Challenge.sol  ChallengeFactory.sol  Setup.sol
_nxbc_nxctl/metadata/: faucet_state.json  metadata.example.json  metadata.json  portal_state.json
_nxbc_nxctl/portal/: Dockerfile  app.py  requirements.txt
_nxbc_nxctl/scripts/: deploy.sh  faucet.py  new_wallet.py  rpc_proxy.py  test.sh  test_portal_flow.py
chall/baby-stack/: Dockerfile  README.md  baby-stack.c  chall.c  docker-compose.yml
chall/school/: README.md  docker-compose.yml
completion/: README.md  nxctl-completion.bash  uninstall.sh
docs/: cli-reference.md  ctf-orchestrator-architecture.md  testing-guide.md  tunnel-providers-guide.md
exports/: pinggy_baby-stack.json
nxbcl/: .gitignore  AGENTS.md  README.md  analysis.md  app.py  audit2.md  config.yml  prompt.md  requirements.txt  setup.sh
nxbcl/cli/: main.py  (+2 more)
nxctl/: __init__.py  api.py  app.py
scripts/: api.sh  cloudflared.sh  delete.sh  install.sh  nxscript  service.sh  uninstall.sh  update.sh
src/: __init__.py  api.py  app.py  app_new.py  app_old.py
(+224 files in other folders)
