[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nxctl"
version = "0.1.0"
description = "NXCTL orchestrates containerized Capture The Flag challenges with automated tunnels and TTL controls."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "NXCTF Community" }
]
keywords = ["ctf", "cybersecurity", "docker", "orchestration", "nxctf"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Topic :: Security",
  "Topic :: System :: Systems Administration"
]
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/nxctf/nxctl"
Repository = "https://github.com/nxctf/nxctl"
Issues = "https://github.com/nxctf/nxctl/issues"

[project.scripts]
nxctl = "nxctl.app:main"

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
include = ["nxctl*", "src"]

[tool.setuptools.package-data]
nxctl = ["completion/*.bash", "completion/*.sh", "completion/README.md"]
